--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,9 @@ block content %}
 <div>
   <h1>login</h1>
   <form method="POST">
-    {{ form.csrf_token }} {{ render_field(form.username) }} 
-    {{ render_field(form.email) }} 
-    {{ render_field(form.password) }} 
-    {{ render_field(form.confirm_password) }} {{
-    form.submit() }}
+    {{ form.csrf_token }} {{ render_field(form.username) }} {{
+    render_field(form.email) }} {{ render_field(form.password) }} {{
+    render_field(form.confirm_password) }} {{ form.submit() }}
   </form>
 </div>
 
