--- a/templates/players_groups.html
+++ b/templates/players_groups.html
@@ -1,9 +1,9 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
 block content %}
 <a href="{{url_for('create_players_group')}}">create_players_group</a>
-<h1>home</h1>
 <div>
-  {% if current_user.is_authenticated %} current_user_name:{{current_user.name}}
+  {% if current_user.is_authenticated %}
+  current_user_name:{{current_user.username}}
 
   <h1>players_group list</h1>
   <table>
@@ -14,9 +14,9 @@ block content %}
     <tr>
       <td>
         <a
-          href="{{url_for('update_plyers_group', players_group_id=players_group.id)}}"
+          href="{{url_for('update_players_group', belonged_players_group_id=players_group.id)}}"
         >
-          {{players_group.name}}</a
+          {{players_group.group_name}}</a
         >
       </td>
       <td>
