--- a/templates/app_top.html
+++ b/templates/app_top.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block content %}
-<a href="{{url_for('create_players_group')}}">create_players_group</a>
+<a href="{{url_for('login')}}">login</a>
+<a href="{{url_for('user_register')}}">user_register</a>
 <div>
   <h1>app_top</h1>
 </div>
