--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,13 +1,10 @@
-{% from "_formhelpers.html" import render_field %}
-{% extends "base.html" %}
-{% block content %}
+{% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
+block content %} {% if current_user.is_authenticated %}
 <h1>reset password</h1>
 <div class="">
-    <form method="POST">
-        {{ form.csrf_token }}
-        {{ render_field(form.password) }}
-        {{ render_field(form.confirm_password) }}
-        {{ form.submit() }}
-    </form>
+  <form method="POST">
+    {{ form.csrf_token }} {{ render_field(form.password) }} {{
+    render_field(form.confirm_password) }} {{ form.submit() }}
+  </form>
 </div>
-{% endblock %}
+{% endif %} {% endblock %}
