--- a/templates/update_player.html
+++ b/templates/update_player.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {%
+block content %} {% if current_user.is_authenticated %}
 <div>
   <h1>update_player</h1>
   <form method="POST">
@@ -9,5 +10,4 @@
     {{form.submit()}}
   </form>
 </div>
-
-{% endblock %}
+{% endif %} {% endblock %}
