--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,23 +1,22 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
-block content %}
-<a href="{{url_for('user_register')}}">user_register</a>
+block content %} {% if current_user.is_authenticated %}
+
 <a href="{{url_for('create_players_group')}}">create_players_group</a>
-<h1>home</h1>
-<div>
-  {% if current_user.is_authenticated %} current_user_name:{{current_user.name}}
 
   <h1>players_group list</h1>
   <table>
     <tr>
       <th>group name</th>
     </tr>
-    {% for players_group in players_groups %}
+    {% if not groups %}
+    <h1>group hasn't been registered yet</h1>
+    {% else %} {% for players_group in groups %}
     <tr>
       <td>
         <a
-          href="{{url_for('update_plyers_group', players_group_id=players_group.id)}}"
+          href="{{url_for('players_in_the_group', belonged_players_group_id=players_group.id)}}"
         >
-          {{players_group.name}}</a
+          {{players_group.group_name}}</a
         >
       </td>
       <td>
@@ -27,9 +26,9 @@ block content %}
         </form>
       </td>
     </tr>
-    {% endfor %}
+    {% endfor %} {% endif %}
   </table>
-  {% endif %}
 </div>
 
-{% endblock %}
+
+{% endif %} {% endblock %}
