--- a/templates/players_in_the_group.html
+++ b/templates/players_in_the_group.html
@@ -1,19 +1,21 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
 block content %} {% if current_user.is_authenticated %}
-current_user_name:{{current_user.username}}
 <a
   href="{{url_for('create_player',belonged_players_group_id=belonged_players_group_id)}}"
   >create_player</a
 >
+{% if players %}
 <a
   href="{{url_for('next_game',belonged_players_group_id=belonged_players_group_id)}}"
   >next game</a
 >
+{% endif %}
 <a
   href="{{url_for('update_players_group',belonged_players_group_id=belonged_players_group_id)}}"
   >change group name</a
 >
 <a href="{{url_for('user_home')}}">user_home</a>
+{% if players|length>0 %}
 <div>
   <h1>players_list</h1>
   <table>
@@ -33,12 +35,17 @@ current_user_name:{{current_user.username}}
       <td>{{player.gender}}</td>
       <td>{{player.play_times}}</td>
       <td>
-        <form method="POST" action="{{url_for('delete_player')}}">
+        <form
+          method="POST"
+          action="{{url_for('delete_player',belonged_players_group_id=player.belonged_players_group_id)}}"
+        >
           {{form.csrf_token}} {{form.id(value=player.id)}} {{form.submit()}}
         </form>
       </td>
     </tr>
-    {% endfor %}
+    {% endfor %} {% else %}
+    <h1>no player registered</h1>
+    {% endif %}
 
     <h1>dicided players</h1>
 
