--- a/templates/update_player.html
+++ b/templates/update_player.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {%
-block content %} {% if current_user.is_authenticated %}
+{% extends "base.html" %} {% block content %} {% if
+current_user.is_authenticated %}
 <div>
   <h1>update_player</h1>
   <form method="POST">
