--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -3,32 +3,30 @@ block content %} {% if current_user.is_authenticated %}
 
 <a href="{{url_for('create_players_group')}}">create_players_group</a>
 
-  <h1>players_group list</h1>
-  <table>
-    <tr>
-      <th>group name</th>
-    </tr>
-    {% if not groups %}
-    <h1>group hasn't been registered yet</h1>
-    {% else %} {% for players_group in groups %}
-    <tr>
-      <td>
-        <a
-          href="{{url_for('players_in_the_group', belonged_players_group_id=players_group.id)}}"
-        >
-          {{players_group.group_name}}</a
-        >
-      </td>
-      <td>
-        <form method="POST" action="{{url_for('delete_players_group')}}">
-          {{form.csrf_token}} {{form.id(value=players_group.id)}}
-          {{form.submit()}}
-        </form>
-      </td>
-    </tr>
-    {% endfor %} {% endif %}
-  </table>
-</div>
-
-
-{% endif %} {% endblock %}
+{% if groups|length<1 %}
+<h1>group hasn't been registered yet</h1>
+{% else %}
+<h1>players_group list</h1>
+<table>
+  <tr>
+    <th>group name</th>
+  </tr>
+  {% for players_group in groups %}
+  <tr>
+    <td>
+      <a
+        href="{{url_for('players_in_the_group', belonged_players_group_id=players_group.id)}}"
+      >
+        {{players_group.group_name}}</a
+      >
+    </td>
+    <td>
+      <form method="POST" action="{{url_for('delete_players_group')}}">
+        {{form.csrf_token}} {{form.id(value=players_group.id)}}
+        {{form.submit()}}
+      </form>
+    </td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %} {% endif %} {% endblock %}
