--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        {% block content %}
-        {% endblock %}
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <link
+      rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}"
+    />
+  </head>
+  <body>
+    {% block content %} {% endblock %}
+  </body>
 </html>
