--- a/templates/user.html
+++ b/templates/user.html
@@ -1,6 +1,11 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
 block content %}
 
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static',filename='style.css') }}"
+/>
 <div class="row">
   <div class="">
     {% for message in get_flashed_messages() %} {{ message }} {% endfor %}
