--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,5 +1,5 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
-block content %} {% if current_user.is_authenticated %}
+block content %} 
 <h1>reset password</h1>
 <div class="">
   <form method="POST">
@@ -7,4 +7,4 @@ block content %} {% if current_user.is_authenticated %}
     render_field(form.confirm_password) }} {{ form.submit() }}
   </form>
 </div>
-{% endif %} {% endblock %}
+{% endblock %}
