--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% from "_formhelpers.html" import render_field %} {% extends "base.html" %} {%
 block content %}
+<a href="{{url_for('user_register')}}">user_register</a>
 <div>
   <h1>login</h1>
   <form method="POST">
