--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -2,6 +2,12 @@
 block content %} {% if current_user.is_authenticated %}
 
 <a href="{{url_for('create_players_group')}}">create_players_group</a>
+<a href="{{url_for('logout')}}">logout</a>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static',filename='style.css') }}"
+/>
 
 {% if groups|length<1 %}
 <h1>group hasn't been registered yet</h1>
