--- a/backend/templates/login.jinja
+++ b/backend/templates/login.jinja
@@ -1,7 +1,7 @@
 {% extends "base.jinja" %} {% block content %}
 <h1>login</h1>
 {% if username %}
-    {{ username }}
+    username:{{ username }}
 {% endif %}
 <form method="post">
   <div class="mb-3">
@@ -15,13 +15,12 @@
 
   <button type="submit" class="btn btn-primary">login</button>
 </form>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
+{% if message %}
+{{ message }}
+{% endif %}
+
+<h3>if you don't have account</h3>
+<a href="{{url_for('auth.register')}}">
+    <button type="submit" name="register" class="btn btn-outline-primary">register</button>
+</a>
 {% endblock content %}
