--- a/backend/templates/update_player.jinja
+++ b/backend/templates/update_player.jinja
@@ -1,8 +1,7 @@
-{% extends "base.html" %} {% block content %} {% if
-current_user.is_authenticated %}
+{% extends "base.html" %} {% block content %} 
 <div>
   <h1>update_player</h1>
   <form method="POST">
   </form>
 </div>
-{% endif %} {% endblock %}
+{% endblock content %}
