done basic backend

--- a/backend/templates/base.jinja
+++ b/backend/templates/base.jinja
@@ -9,6 +9,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../static/css/style.css">
   </head>
   <body>
   <!-- <div class="vh-100  align-items-center justify-content-center d-flex" > -->
