--- a/backend/templates/login.jinja
+++ b/backend/templates/login.jinja
@@ -2,18 +2,14 @@
 <button type="submit" name="register"  onclick="location.href='{{ url_for('auth.register')}}';" class="btn btn-outline-primary">sign up</button>
 <div class="vh-100 bg-gray align-items-center justify-content-center d-flex">
     <div class="bg-white col-8">
-        <h1>login</h1>
-        <form method="post">
           <div class="mb-3">
-            <label for="" class="form-label">username</label>
-            <input type="text" class="form-control"  name="username" />
+            <input type="text" class="form-control" placeholder="username"  name="username" />
           </div>
           <div class="mb-3 ">
-            <label for="" class="form-label">password</label>
-            <input type="password" class="form-control"  name="password" />
+            <input type="password" class="form-control" placeholder="password" name="password" />
           </div>
-          <button type="submit" class="btn btn-primary">login</button>
-        </form>
+        <form method="post"> <button type="submit" class="btn btn-primary">login</button> </form>
+        <form method="get"> <button type="submit" class="btn btn-outline-primary">register</button> </form>
 
         {% if message %} <p>{{ message }}</p> {% endif %}
 
