--- a/backend/templates/login.jinja
+++ b/backend/templates/login.jinja
@@ -1,18 +1,19 @@
 {% extends "base.jinja" %} {% block content %}
-<button type="submit" name="register"  onclick="location.href='{{ url_for('auth.register')}}';" class="btn btn-outline-primary">sign up</button>
-<div class="vh-100 bg-gray align-items-center justify-content-center d-flex">
-    <div class="bg-white col-8">
-          <div class="mb-3">
-            <input type="text" class="form-control" placeholder="username"  name="username" />
+<h2>login page</h2>
+<div class="d-flex justify-content-end">
+    <button type="submit" name="signup"  onclick="location.href='{{ url_for('auth.signup')}}';" class="btn btn-outline-primary ">sign up</button>
+</div>
+
+          <div class="mb-3 col-8">
+            <input type="text" id="username" class="form-control" placeholder="username"  name="username" required />
           </div>
-          <div class="mb-3 ">
-            <input type="password" class="form-control" placeholder="password" name="password" />
+          <div class="mb-3 col-k">
+            <input type="password" id="password"  class="form-control" placeholder="password" name="password" required/>
           </div>
-        <form method="post"> <button type="submit" class="btn btn-primary">login</button> </form>
-        <form method="get"> <button type="submit" class="btn btn-outline-primary">register</button> </form>
+        <form method="post"> <button type="submit" id="loginBtn" class="btn btn-primary">login</button> </form>
 
         {% if message %} <p>{{ message }}</p> {% endif %}
 
-    </div>
-</div>
 {% endblock content %}
+<script type="" src="./js/login.js"></script>
+
