--- a/backend/templates/signup.jinja
+++ b/backend/templates/signup.jinja
@@ -1,5 +1,5 @@
 {% extends "base.jinja" %} {% block content %}
-<h1>user register</h1>
+<h1>sign up</h1>
 <form method="post">
   <div class="mb-3">
     <label for="" class="form-label">username</label>
@@ -10,6 +10,6 @@
     <input type="password" class="form-control"  name="password" />
   </div>
 
-  <button type="submit" class="btn btn-primary">register</button>
+  <button type="submit" class="btn btn-primary">sign up</button>
 </form>
 {% endblock content %}
